--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div class="page-wrapper">
-		<!-- MENU SIDEBAR-->
-		<aside class="menu-sidebar d-none d-lg-block">
-			<div class="logo">
-				<a href="home.html">
-					<img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
-				</a>
+<div class="page-wrapper">
+
+	<!-- MENU SIDEBAR-->
+	<aside class="menu-sidebar d-none d-lg-block">
+	  <div class="logo">
+		<a routerLink="/products">
+		  <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
+		</a>
+	  </div>
+  
+	  <app-product-category-menu></app-product-category-menu>
+  
+	</aside>
+	<!-- END MENU SIDEBAR-->
+  
+	<div class="page-container">
+	  <!-- HEADER DESKTOP-->
+	  <header class="header-desktop">
+		<div class="section-content section-content-p30">
+		  <div class="container-fluid">
+			<div class="header-wrap">
+  
+			  <app-search></app-search>
+   
+			  <app-cart-status></app-cart-status>
+  
 			</div>
-			<app-product-category-menu></app-product-category-menu>
-		</aside>
-		<!-- END MENU SIDEBAR-->
-		<!-- PAGE CONTAINER-->
-		<div class="page-container">
-			<!-- HEADER DESKTOP-->
-			<header class="header-desktop">
-				<div class="section-content section-content-p30">
-					<div class="container-fluid">
-						<div class="header-wrap">
-							<app-search></app-search>
-							<div class="cart-area d-n">
-								<a href="shopping-detail.html">
-									<div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart"
-										aria-hidden="true"></i>
-								</a>
-							</div>
-						</div>
-						<div class="account-wrap"></div>
-					</div>
-				</div>
-			</header>
-			<!-- END HEADER DESKTOP-->
-			<!-- MAIN CONTENT-->
-			<router-outlet></router-outlet>
-		    <!-- END MAIN CONTENT-->
+			<div class="account-wrap"></div>
+		  </div>
 		</div>
+	  </header>
+	  <!-- END HEADER DESKTOP-->
+  
+	  <!-- MAIN CONTENT-->
+	  <router-outlet></router-outlet>
+  
 	</div>
-	<!-- END PAGE CONTAINER-->
-	<footer>
-		<ul>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Contact Us</a></li>
-			<li><a href="#">Help</a></li>
-		</ul>
-	</footer>
-</body>
-</html>
+  </div>
+  
+  <!-- ENDS PAGE CONTAINER -->
+  
+  <footer>
+	<ul>
+	  <li><a href="#">About Us</a></li>
+	  <li><a href="#">Contact Us</a></li>
+	  <li><a href="#">Help</a></li>
+	</ul>
+  </footer>
